--- a/COMP003B.Assignment4/Views/Articles/Index.cshtml
+++ b/COMP003B.Assignment4/Views/Articles/Index.cshtml
@@ -5,7 +5,7 @@
     Layout = "_Layout";
 }
 
-<h2>About the Games</h2>
+<h2 class="center-text">About the Games</h2>
 
 @foreach (var article in Model)
 {
