--- a/COMP003B.Assignment4/Views/Event/Register.cshtml
+++ b/COMP003B.Assignment4/Views/Event/Register.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewData["Title"] = "Event Registration";
 }
-<h1>Event Registration</h1>
+<h1>Tournament Registration</h1>
 <div class="row">
     <div class="col-md-8">
         <form asp-controller="Event" asp-action="Register" method="post">
