--- a/COMP003B.Assignment4/Views/Shared/_ArticleCard.cshtml
+++ b/COMP003B.Assignment4/Views/Shared/_ArticleCard.cshtml
@@ -4,6 +4,7 @@
     <div class="card-body">
         <h4 class="card-title">@Model.Title</h4>
         <p class="card-text">@Model.Summary</p>
-        <a asp-action="Details" asp-route-id="@Model.Id" class="btn btn-outline-primary">Watch Video</a>
+        <a href="@Model.VideoUrl" target="_blank" class="btn btn-outline-primary">Watch Video</a>
+        <a asp-action="Details" asp-route-id="@Model.Id" class="btn btn-outline-secondary">Read More</a>
     </div>
 </div>
